--- a/config/database.yml
+++ b/config/database.yml
@@ -14,6 +14,8 @@ test:
   timeout: 5000
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
-  timeout: 5000
+  adapter: mysql
+  database: towerdefense_production
+  host: 127.0.0.1
+  username: towerdefense
+  password:
