--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "vendor/plugins/restful-authentication"]
 	path = vendor/plugins/restful-authentication
 	url = git://github.com/technoweenie/restful-authentication.git
+[submodule "vendor/gems/juggernaut"]
+	path = vendor/gems/juggernaut
+	url = git://github.com/maccman/juggernaut_gem.git
+[submodule "vendor/plugins/juggernaut"]
+	path = vendor/plugins/juggernaut
+	url = git://github.com/maccman/juggernaut_plugin.git
